k8s.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: us.gcr.io/taeho-io-220708/auth:${CIRCLE_SHA1}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
spec:
  ports:
    - port: 80
      name: grpc
  selector:
    app: auth
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
spec:
  hosts:
    - auth.taeho.io
  gateways:
    - public-gateway
  http:
    - route:
        - destination:
            host: auth
            port:
              number: 80
---
